--- a/expense_tracker/expenses/templates/expenses/base.html
+++ b/expense_tracker/expenses/templates/expenses/base.html
@@ -5,7 +5,11 @@
 </head>
 <body>
     {% if user.is_authenticated %}
-      Logged in as {{ user.username }} | <a href="{% url 'logout' %}">Logout</a>
+      Logged in as {{ user.username }}
+      <form action="{% url 'logout' %}" method="post" style="display:inline;">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
     {% else %}
       <a href="{% url 'login' %}">Login</a> | <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
