--- a/expense_tracker/expenses/templates/expenses/expense_form.html
+++ b/expense_tracker/expenses/templates/expenses/expense_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'expenses/base.html' %}
 
 {% block content %}
   <h2>{% if form.instance.pk %}Edit{% else %}Add{% endif %} Expense</h2>
